utils/price token endpoint
