# syn/routes/api/v1/utils.py
@@ -13,11 +13,12 @@ from datetime import datetime
 from flask import Blueprint, jsonify, request
 from web3 import Web3
 
-from syn.utils.data import LOGS_REDIS_URL, SYN_DATA, cache, TOKENS_INFO
+from syn.utils.price import (ADDRESS_TO_CGID, get_price_for_address,
+                             get_historic_price_for_address, CUSTOM)
+from syn.utils.data import (LOGS_REDIS_URL, SYN_DATA, cache, TOKENS_INFO,
+                            symbol_to_address)
 from syn.utils.helpers import get_all_keys, date2block
-from syn.utils.price import ADDRESS_TO_CGID, CUSTOM, get_price_for_address, get_historic_price_for_address
-from syn.utils.explorer.data import CHAINS, CHAINS_REVERSED
-from syn.utils import verify
+from syn.utils.explorer.data import CHAINS
 
 utils_bp = Blueprint('utils_bp', __name__)
 
@@ -52,19 +53,45 @@ def chains():
     return jsonify(CHAINS)
 
 
-@utils_bp.route('/token_price/<chain:chain>/<token>', methods=['GET'])
-@cache.cached()
+@utils_bp.route('/tokens', methods=['GET'])
+def tokens():
+    res = defaultdict(dict)
+
+    for chain, data in TOKENS_INFO.items():
+        for token, _data in data.items():
+            res[chain][token] = {
+                'decimals': _data['decimals'],
+                'symbol': _data['symbol'],
+                'name': _data['name'],
+            }
+
+            if token in CUSTOM[chain]:
+                res[chain][token].update({'cgid': None})
+            else:
+                cgid = ADDRESS_TO_CGID[chain][token].value
+                res[chain][token].update({'cgid': cgid})
+
+    return res
+
+
+@utils_bp.route('/price/<chain:chain>/<token>', methods=['GET'])
+#@cache.cached(query_string=True)
 def token_price(chain: str, token: str):
-    date = request.args.get('date', None)
+    date = request.args.get('date', type=datetime.fromisoformat)
+    token = token.lower()
+
+    # Check if user supplied a symbol (e.g. SYN), if this is true then get
+    # the address else fallback to `token` (which means address supplied).
+    token = symbol_to_address[chain].get(token, token)
 
     # validate token address
     if token not in ADDRESS_TO_CGID[chain]:
         return (jsonify({'error': 'token for chain not supported'}), 400)
 
-    if date:
+    if date is not None:
         res = get_historic_price_for_address(chain=chain,
                                              address=token,
-                                             date=date)
+                                             date=str(date))
     else:
         # get current price if no date entered
         res = get_price_for_address(chain=chain, address=token)
